# ripr

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATE.md  Cargo.toml  README.md  clippy.toml  codecov.yml  deny.toml  ripr.toml.example
.config/: nextest.toml
.factory/: threat-model.md
.github/: dependabot.yml  pull_request_template.md  settings.yml
.ripr/: README.md  allow-attributes.txt  no-panic-allowlist-migration-proposal.md  no-panic-allowlist.toml  no-panic-allowlist.txt  static-language-allowlist.toml  static-language-allowlist.txt  test_intent.toml  traceability.toml
badges/: ripr-plus.json  ripr.json
crates/ripr/: Cargo.toml  README.md
crates/ripr/src/: app.rs  cli.rs  config.rs  domain.rs  lib.rs  loop_commands.rs  lsp.rs
crates/ripr/src/agent/: loop_commands.rs  mod.rs
crates/ripr/src/analysis/: canonical_gap.rs  classifier.rs  diff.rs  mod.rs  pipeline.rs  probes.rs  rust_index.rs  seam_cache.rs  seam_classification.rs  seam_inventory.rs  seams.rs  sort.rs  summary.rs  test_grip_evidence.rs  value_resolution.rs  workspace.rs
crates/ripr/src/analysis/classifier/: finding.rs  mod.rs  relation.rs
crates/ripr/src/analysis/classify/: activation.rs  decision.rs  flow.rs  infection.rs  mod.rs  related_tests.rs  reveal.rs  text.rs
crates/ripr/src/analysis/diff/: load.rs  mod.rs  parse.rs
crates/ripr/src/analysis/extract/: calls.rs  literals.rs  mod.rs  oracles.rs  probe_shapes.rs  returns.rs  text.rs
crates/ripr/src/analysis/facts/: build.rs  mod.rs  model.rs
crates/ripr/src/analysis/language/: adapter.rs  id.rs  mod.rs  perl.rs  python.rs  router.rs  rust.rs  typescript.rs
crates/ripr/src/analysis/language/python/: python_tests.rs
crates/ripr/src/analysis/probes/: classify.rs  config.rs  diff.rs  family.rs  lexical.rs  mod.rs  repo.rs
crates/ripr/src/analysis/rust_index/: mod.rs  types.rs
crates/ripr/src/analysis/syntax/: lexical.rs  mod.rs  ra.rs
crates/ripr/src/analysis/workspace/: classify.rs  discover.rs  mod.rs  select.rs
crates/ripr/src/app/: agent_brief.rs  agent_review_summary.rs  agent_status.rs  agent_workflow.rs  check.rs  context.rs  explain.rs  selector.rs
crates/ripr/src/app/tests/: badge_rendering.rs
crates/ripr/src/cli/: agent.rs  command.rs  commands.rs  doctor.rs  execute.rs  github_workflow.rs  help.rs  init_workflow.rs  mod.rs  parse.rs
crates/ripr/src/cli/commands/: agent_gap_packet.rs  check.rs  context.rs  doctor.rs  explain.rs  init.rs  lsp.rs  mod.rs  pilot.rs  policy.rs  tests.rs
crates/ripr/src/cli/commands/policy/: parse.rs  reports.rs
crates/ripr/src/cli/commands/swarm/: ingest.rs  mod.rs  queue.rs
crates/ripr/src/cli/help/: core.rs  overview.rs
crates/ripr/src/cli/init_workflow/: agent_loop.rs  artifact_paths.rs  bootstrap.rs  evidence_reports.rs  mod.rs  pr_guidance.rs  publishing.rs  template.rs
crates/ripr/src/config/: model.rs  python.rs  tests.rs
crates/ripr/src/domain/: classification.rs  context_packet.rs  evidence.rs  language.rs  mod.rs  probe.rs  summary.rs  support.rs
crates/ripr/src/lsp/: actions.rs  backend.rs  capabilities.rs  config.rs  diagnostics.rs  dispatch.rs  gap_artifacts.rs  hover.rs  mod.rs  protocol.rs  responses.rs  state.rs  tests.rs  uri.rs
crates/ripr/src/output/: agent_brief.rs  agent_receipt.rs  agent_seam_packets.rs  agent_workflow.rs  assistant_loop_health.rs  badge.rs  baseline.rs  baseline_delta.rs  baseline_update.rs  coverage_grip_frontier.rs  diff_report.rs  evidence_health.rs  evidence_record.rs  first_pr.rs  first_useful_action.rs  format.rs  gap_decision_ledger.rs  gate.rs  github.rs  human.rs  json.rs  markdown.rs  mod.rs  mutation_calibration.rs  outcome.rs  perl_preview_card.rs  pilot.rs  policy_history.rs  policy_operations.rs  policy_preview_promotion.rs  policy_promotion.rs  policy_readiness.rs  pr_evidence_ledger.rs  pr_inline_comment_publish_plan.rs  pr_review_front_panel.rs  preview_actionability.rs  python_repair_card.rs  render.rs  repo_exposure.rs  repo_seams.rs  (+10 more)
crates/ripr/src/output/badge/: mod.rs  model.rs  summaries.rs  test_efficiency.rs  tests.rs
crates/ripr/src/output/evidence_health/: aggregation.rs  json.rs  markdown.rs
crates/ripr/src/output/first_pr/: options.rs  rendering.rs  validation.rs
crates/ripr/src/output/first_useful_action/: json.rs  markdown.rs  model.rs  tests.rs
crates/ripr/src/output/human/: finding.rs  header.rs  mod.rs  sections.rs  tests.rs
crates/ripr/src/output/json/: context_packet.rs  finding_alignment.rs  formatter.rs  mod.rs  report.rs
crates/ripr/src/output/json/finding_alignment/: classify.rs  items.rs  mod.rs  model.rs  parse.rs  render.rs  summary.rs
crates/ripr/src/output/mutation_calibration/: mod.rs  outcome_records.rs  parse.rs  render.rs  report.rs  types.rs
crates/ripr/src/output/outcome/: markdown.rs  mod.rs  path.rs  render_json.rs  review.rs
crates/ripr/src/output/pilot/: ranking.rs  render.rs  tests.rs
crates/ripr/src/output/suppressions/: apply.rs  build.rs  mod.rs  parse.rs
crates/ripr/tests/: cli_smoke.rs
docs/: AGENT_DISPATCH_WORKFLOW.md  AGENT_WORKFLOWS.md  ARCHITECTURE.md  ASSISTANT_LOOP_HEALTH_PROPOSAL.md  ASSISTANT_LOOP_HEALTH_WORKFLOW.md  BADGE_ADOPTION.md  BADGE_POLICY.md  BASELINE_LEDGER_WORKFLOW.md  BLOCKING_READINESS.md  BUN_UB_TYPESCRIPT_PREVIEW_RUNBOOK.md  CALIBRATED_GATE_POLICY.md  CAPABILITY_MATRIX.md  CHARTER.md  CI.md  CLIPPY_POLICY.md  CODEX_GOALS.md  CONFIGURATION.md  DEFERRED.md  DOCUMENTATION.md  DOGFOODING.md  DROID_ROLLOUT.md  EDITOR_AGENT_INTEGRATION.md  EDITOR_EVIDENCE_UX.md  EDITOR_EVIDENCE_WORKFLOW.md  EDITOR_EXTENSION.md  EDITOR_FIRST_RUN_TO_FIRST_RECEIPT.md  EDITOR_GAP_COCKPIT_WORKFLOW.md  ENGINEERING.md  FILE_POLICY.md  FIRST_PR_WORKFLOW.md  FIRST_USEFUL_ACTION_WORKFLOW.md  FRICTION_LOG.md  GATE_BLOCKING_READINESS.md  GENERATED_EVIDENCE.md  GOAL_MODE.md  IMPLEMENTATION_CAMPAIGNS.md  IMPLEMENTATION_PLAN.md  INSTALLATION_VERIFICATION.md  LANGUAGE_ADAPTER_PREVIEW.md  LEARNINGS.md  (+42 more)
fixtures/: CALIBRATION_CORPUS.md  EXAMPLE_CORPUS.md  README.md
metrics/: capabilities.toml
plans/: README.md
(+932 files in other folders)
