[package]
name = "ripr"
version = "0.4.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Static RIPR mutation-exposure analysis for Rust workspaces"
readme = "README.md"
keywords = ["mutation-testing", "testing", "rust", "coverage", "lsp"]
categories = ["development-tools", "development-tools::testing"]
include = [
  "src/**",
  "tests/**",
  "examples/**",
  "README.md",
  "LICENSE-*",
  "Cargo.toml"
]

[lib]
name = "ripr"
path = "src/lib.rs"

[[bin]]
name = "ripr"
path = "src/main.rs"

[dependencies]
ra_ap_syntax = "0.0.330"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "time"] }
tower-lsp-server = "0.23.0"

[lints]
workspace = true
