[package]
name = "ripr"
version = "0.5.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Find Rust test-oracle gaps before mutation testing with static RIPR evidence"
readme = "README.md"
keywords = ["mutation-testing", "testing", "rust", "static-analysis", "lsp"]
categories = ["development-tools", "development-tools::testing"]
include = [
  "src/**",
  "tests/**",
  "examples/**",
  "README.md",
  "LICENSE-*",
  "Cargo.toml"
]

[lib]
name = "ripr"
path = "src/lib.rs"

[[bin]]
name = "ripr"
path = "src/main.rs"

[dependencies]
oxc_allocator = "0.130"
oxc_ast = "0.130"
oxc_parser = "0.130"
oxc_span = "0.130"
ra_ap_syntax = "0.0.330"
# Default features pull `malachite-bigint` (LGPL-3.0-only), which is
# incompatible with our MIT/Apache-2.0 license posture. Disable the
# default and select `num-bigint` (MIT/Apache-2.0) for arbitrary-precision
# integer literals in the Python AST. `location` is required so the
# AST carries span information for the upcoming fact extractor.
rustpython-parser = { version = "0.4", default-features = false, features = ["location", "num-bigint"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "time"] }
tower-lsp-server = "0.23.0"

[lints]
workspace = true
